# ptblop

./: README.md
ptblop/: .gitignore  CHANGELOG.md  Makefile  Makefile.inc  README.md  gitmessage  pyproject.toml
ptblop/examples/convert_old_configs/: README.md  qwen15_4b.py  qwen25_32b_bpc_to_old.py
ptblop/examples/convert_old_configs/inp/qwen15_4b/: config_m20.json  config_m24.json  config_m30.json
ptblop/src/ptblop/: __init__.py  core.py  prunable_block.py  utils.py
ptblop/src/ptblop/wrapper_timm/: vision_transformer.py
ptblop/src/ptblop/wrapper_transformers/: __init__.py  common.py  llama3.py  phi2.py  qwen2.py  qwen3.py
ptblop/tests/: helpers.py  test_general.py  test_llama3.py  test_phi2.py  test_qwen2.py  test_qwen3.py  test_qwen3_moe.py  test_vision_transformer.py  test_vit.py
ptblopgen/: .gitignore  CHANGELOG.md  Makefile  Makefile.inc  README.md  gitmessage  pyproject.toml  requirements-llm.txt  requirements-verified.txt  requirements.txt  setup.py
ptblopgen/aux/: build_zip_full.sh  build_zip_slim.sh
ptblopgen/examples/gen_llm_simple/: gen_llm.sh  gen_llm.yaml  genconfig_llm.yaml
ptblopgen/examples/vis_pareto_eval/: count_pareto.py  vis_pareto_eval.py
ptblopgen/src/ptblopgen/: _version.py  utils.py
ptblopgen/src/ptblopgen/builders/: __init__.py  builders.py  llm_evaluators.py  llm_models.py  vis_evaluators.py  vis_models.py
ptblopgen/src/ptblopgen/cli/: __init__.py  run.py  run_gen.py
ptblopgen/src/ptblopgen/estimators/: __init__.py  bounds_estimator.py
ptblopgen/src/ptblopgen/modelgen/: __init__.py  configurator.py  estimator_helpers.py  main_gen.py  main_paretoeval.py  main_paretofind.py  main_sample.py  modelgen.py  pareto.py  pareto_evaluation.py  pareto_helpers.py  pareto_optimization.py  run_paretoeval.py  run_paretofind.py  run_sample.py  sample.py
ptblopgen/tests/: test_get_num_active_params.py
ptblopgen/tests_full/: test_llm_paretoeval.sh  test_llm_paretoeval_blocks.sh  test_llm_paretofind.sh  test_llm_paretofind_blocks.sh  test_llm_sample.sh  test_llm_sample_blocks.sh
ptblopgen/tests_full/data/: bp_configs.json  bp_configs_blocks.json  config.yaml  config_blocks.yaml  pareto_front_0004.json  pareto_front_blocks_0004.json
ptblopgen_evalplus/: .gitignore  CHANGELOG.md  Makefile  README.md  gitmessage  pyproject.toml  requirements.txt  setup.py
ptblopgen_evalplus/aux/: update_version.py
ptblopgen_evalplus/examples/: runeval.py  runeval.sh  runevalplus.sh
ptblopgen_evalplus/examples/run_evalplus/: run_evalplus.sh
ptblopgen_evalplus/examples/runevalplus/: runevalplus.py  runevalplus_view.py
ptblopgen_evalplus/examples/summarize_bp_configs/: summarize_bp_configs.py
ptblopgen_evalplus/src/ptblopgen_evalplus/: __init__.py  _version.py  codegen.py  codegen_alt.py  config.py  core.py  evaluate.py  sanitize.py
ptblopgen_evalplus/src/ptblopgen_evalplus/data/: __init__.py  mbpp.py  utils.py
ptblopgen_evalplus/src/ptblopgen_evalplus/eval/: __init__.py  _special_oracle.py
ptblopgen_evalplus/src/ptblopgen_evalplus/provider/: __init__.py  base.py  hf.py  utility.py  vllm.py
ptblopgen_evalplus/tests/: test_simple.py
ptblopgen_imagenet/: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml  setup.py
ptblopgen_imagenet/aux/: get_version.py
ptblopgen_imagenet/examples/: run_imagenet.py  run_imagenet.sh
ptblopgen_imagenet/examples/run_imagenet/: run_imagenet.py  run_imagenet.sh
ptblopgen_imagenet/src/ptblopgen_imagenet/: __init__.py  evaluate.py  validate.py
