[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ptblopgen_evalplus"
authors = [
  { name="lopusz" },
]
description = "evalplus evaluator pluging for ptlbopgen"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
]
dynamic = ["version", "dependencies"]
[project.urls]
homepage = "https://pypi.org/project/ptblopgen-evalplus"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests"]

[tool.setuptools.package-data]
"ptblopgen_evalplus" = ["resources/HumanEvalPlus-v0.1.10.jsonl.gz", "resources/MbppPlus-v0.2.0.jsonl.gz"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
